--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,50 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<h1 class="text-center pt-2 pb-5">Pacchetti Viaggio disponibili</h1>
+
+<div class="container-fluid" id="content-container"></div>
+
+<script type="text/javascript">
+    
+    const contentContainer = document.getElementById("content-container");
+
+    axios.get("/api/travelpackage/get")
+        .then(resp => {
+            console.log(resp.data);
+
+            const list = document.createElement("ul");
+            list.setAttribute("class", "list-group flex-row flex-wrap ms-5");
+
+            const data = resp.data;
+
+            data.forEach(pack => {
+                const listItem = document.createElement("li");
+                listItem.setAttribute("class", "card my-3 me-3 ms_card");
+                const cardImg = document.createElement("img");
+                cardImg.setAttribute("src", pack.cover);
+                cardImg.setAttribute("class", "card-img-top");
+                const cardBody = document.createElement("div");
+                cardBody.setAttribute("class", "card-body");
+                const cardTitle = document.createElement("h2");
+                cardTitle.setAttribute("class", "card-title");
+                const cardDesc = document.createElement("p");
+                cardDesc.setAttribute("class", "card-text pt-3");
+                const cardPrice = document.createElement("span");
+                cardPrice.setAttribute("class", "d-block");
+                cardTitle.innerHTML += `Pacchetto ${pack.title}`;
+                cardDesc.innerHTML += `${pack.description}`;
+                cardPrice.innerHTML += `Prezzo: € ${pack.price}`;
+                cardBody.append(cardTitle);
+                cardBody.append(cardDesc);
+                cardBody.append(cardPrice);
+                listItem.append(cardImg);
+                listItem.append(cardBody);
+                list.append(listItem);
+            })
+            contentContainer.append(list);
+        })
+        .catch(err => {
+            console.log(err);
+        })
+</script>
