--- a/Views/TravelPackage/Create.cshtml
+++ b/Views/TravelPackage/Create.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Aggiungi un nuovo pacchetto";
 }
 
-@model TravelPackage
+@model TravelDestination
 
 <h1>Aggiungi un nuovo pacchetto</h1>
 
@@ -10,23 +10,45 @@
     @Html.AntiForgeryToken()
     <div class="form-check mb-3">
         <label for="title" class="form-label">Nome:</label>
-        <input type="text" class="form-control" id="title" placeholder="Inserisci il titolo del pacchetto" asp-for="Title">
-        <span asp-validation-for="Title" class="text-danger"></span>
+        <input type="text" class="form-control" id="title" placeholder="Inserisci il titolo del pacchetto" asp-for="Package.Title">
+        <span asp-validation-for="Package.Title" class="text-danger"></span>
     </div>
     <div class="form-check mb-3">
         <label for="description">Descrizione:</label>
-        <textarea class="form-control" rows="10" id="description" asp-for="Description"></textarea>
-        <span asp-validation-for="Description" class="text-danger"></span>
+        <textarea class="form-control" rows="10" id="description" asp-for="Package.Description"></textarea>
+        <span asp-validation-for="Package.Description" class="text-danger"></span>
     </div>
     <div class="form-check mb-3">
         <label for="cover" class="form-label">Cover:</label>
-        <input type="text" class="form-control" id="cover" placeholder="Inserisci il percorso dell'immagine'" asp-for="Cover">
-        <span asp-validation-for="Cover" class="text-danger"></span>
+        <input type="text" class="form-control" id="cover" placeholder="Inserisci il percorso dell'immagine'" asp-for="Package.Cover">
+        <span asp-validation-for="Package.Cover" class="text-danger"></span>
     </div>
     <div class="form-check mb-3">
         <label for="price" class="form-label">Prezzo:</label>
-        <input type="text" class="form-control" id="price" placeholder="Inserisci il prezzo del pacchetto" asp-for="Price">
-        <span asp-validation-for="Price" class="text-danger"></span>
+        <input type="text" class="form-control" id="price" placeholder="Inserisci il prezzo del pacchetto" asp-for="Package.Price">
+        <span asp-validation-for="Package.Price" class="text-danger"></span>
+    </div>
+    <div class="form-check mb-3">
+        <label for="duration" class="form-label">Durata:</label>
+        <input type="number" class="form-control" id="price" placeholder="Inserisci la durata (in giorni) del viaggio" asp-for="Package.DurationInDays">
+        <span asp-validation-for="Package.DurationInDays" class="text-danger"></span>
+    </div>
+    <div class="form-check mb-3">
+        <span class="form-label">Ingredienti:</span>
+        <select asp-for="SelectedDestinations" class="form-select" multiple>
+            @foreach (Destination destination in Model.Destinations)
+            {
+                @if (Model.Package.Destinations.Contains(destination))
+                {
+                    <option value="@destination.Id" selected>@destination.Name</option>
+                }
+                else
+                {
+                    <option value="@destination.Id">@destination.Name</option>
+                }
+            }
+        </select>
+        <span asp-validation-for="SelectedDestinations" class="text-danger"></span>
     </div>
     <div class="form-check mb-3">
         <button type="submit" class="btn btn-success">Salva pacchetto</button>
