TravelDestination model added to Update too (TravelPackage_view & controller)

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <h1 class="text-center pt-2 pb-5">Pacchetti Viaggio disponibili</h1>
 
 <div class="d-flex w-25 py-5 mx-auto">
-    <input id="search-input" class="form-control me-2" type="search" placeholder="Cerca un pacchetto-viaggi" aria-label="Search">
+    <input id="search-input" class="form-control me-2" type="text" placeholder="Cerca un pacchetto-viaggi" aria-label="Search">
 </div>
 
 <div class="container-fluid" id="content-container"></div>
