--- a/Views/Shared/_GuestLayout.cshtml
+++ b/Views/Shared/_GuestLayout.cshtml
@@ -1,8 +1,4 @@
-﻿@using Microsoft.AspNetCore.Identity
-
-@inject SignInManager<IdentityUser> SignInManager
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -10,18 +6,13 @@
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.1.3/axios.min.js" integrity="sha512-0qU9M9jfqPw6FKkPafM3gy2CBAvUWnYVOfNPDYKVuRTel1PrciTj+a9P3loJB+j0QmN2Y0JYQmkBBS8W+mbezg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
 
     <header>
-        @if (SignInManager.IsSignedIn(User))
-        {
-            @Html.Partial("_EditorHeader")
-        }
-        else
-        {
-            @Html.Partial("_HomeHeader")
-        }
+        @Html.Partial("_HomeHeader")
     </header>
     
     <div class="container">
