style_details fixed

--- a/Views/Home/Details.cshtml
+++ b/Views/Home/Details.cshtml
@@ -8,9 +8,9 @@
 
 <h2 class="text-center py-3">Contattaci per avere maggiori info</h2>
 
-<div id="success" class="d-none my_pointer alert alert-success text-center"></div>
+<div id="success" class="d-none ms_pointer alert alert-success text-center"></div>
 
-<ul id="errors" class="d-none list-group my_pointer"></ul>
+<ul id="errors" class="d-none list-group ms_pointer"></ul>
 
 <form id="message-form">
     <div class="mb-3">
