--- a/Views/Shared/_EditorHeader.cshtml
+++ b/Views/Shared/_EditorHeader.cshtml
@@ -16,6 +16,9 @@
                 <li class="nav-item">
                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home del Guest</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Message" asp-action="Index">Messaggi</a>
+                </li>
                 <!-- code omitted -->
                 <partial name="_LoginPartial" />
             </ul>
