--- a/Views/TravelPackage/Create.cshtml
+++ b/Views/TravelPackage/Create.cshtml
@@ -34,7 +34,7 @@
         <span asp-validation-for="Package.DurationInDays" class="text-danger"></span>
     </div>
     <div class="form-check mb-3">
-        <span class="form-label">Ingredienti:</span>
+        <span class="form-label">Destinazioni:</span>
         <select asp-for="SelectedDestinations" class="form-select" multiple>
             @foreach (Destination destination in Model.Destinations)
             {
